// Generated by the workflow skill in mode `implement` from
// experiments/workflow-modeling/examples/spec-evolution.yaml.
//
// Pattern: A (transition table). Selected per
// experiments/workflow-modeling/templates-candidate/WORKFLOW_IMPLEMENTATION_GUIDE.md
// because the model is small (7 states, 7 events, 2 guards), has no
// hierarchical states, no entry/exit hooks, and no pre-existing FSM
// library in the target.
//
// The YAML is the source of authority. Any change to states, events,
// guards, or transitions must originate in the YAML and propagate here.

import {
  guardHasCompletionVerificationGate,
  guardSupersedingSpecAccepted,
} from './guards.ts';

export type State =
  | 'draft'
  | 'under_review'
  | 'accepted'
  | 'complete'
  | 'superseded'
  | 'withdrawn'
  | 'rejected';

export type Event =
  | 'submit_for_review'
  | 'request_changes'
  | 'accept'
  | 'reject'
  | 'implement_and_verify'
  | 'supersede'
  | 'withdraw';

export type GuardName =
  | 'has_completion_verification_gate'
  | 'superseding_spec_accepted';

export interface TransitionContext {
  hasCompletionVerificationGate?: boolean;
  supersedingSpecAccepted?: boolean;
}

interface Transition {
  from: State;
  to: State;
  event: Event;
  guard?: GuardName;
}

export const TRANSITIONS: readonly Transition[] = [
  { from: 'draft',        to: 'under_review', event: 'submit_for_review' },
  { from: 'under_review', to: 'draft',        event: 'request_changes' },
  { from: 'under_review', to: 'accepted',     event: 'accept' },
  { from: 'under_review', to: 'rejected',     event: 'reject' },
  { from: 'draft',        to: 'withdrawn',    event: 'withdraw' },
  { from: 'accepted',     to: 'complete',     event: 'implement_and_verify', guard: 'has_completion_verification_gate' },
  { from: 'accepted',     to: 'superseded',   event: 'supersede',            guard: 'superseding_spec_accepted' },
  { from: 'complete',     to: 'superseded',   event: 'supersede',            guard: 'superseding_spec_accepted' },
];

export const TERMINAL_STATES: readonly State[] = [
  'complete',
  'superseded',
  'withdrawn',
  'rejected',
];

// States that are terminal but admit a documented exception
// (re_entry_allowed: true in the YAML). Only "complete" qualifies.
export const RE_ENTRY_ALLOWED_STATES: readonly State[] = ['complete'];

export type TransitionResult =
  | { kind: 'allowed'; next: State }
  | { kind: 'refused'; reason: 'no_matching_transition' | 'guard_false' };

export function applyTransition(
  current: State,
  event: Event,
  context: TransitionContext = {},
): TransitionResult {
  const candidates = TRANSITIONS.filter(
    (t) => t.from === current && t.event === event,
  );

  if (candidates.length === 0) {
    return { kind: 'refused', reason: 'no_matching_transition' };
  }

  for (const t of candidates) {
    if (!t.guard) {
      return { kind: 'allowed', next: t.to };
    }
    if (evaluateGuard(t.guard, context)) {
      return { kind: 'allowed', next: t.to };
    }
  }

  return { kind: 'refused', reason: 'guard_false' };
}

function evaluateGuard(
  name: GuardName,
  context: TransitionContext,
): boolean {
  switch (name) {
    case 'has_completion_verification_gate':
      return guardHasCompletionVerificationGate(context);
    case 'superseding_spec_accepted':
      return guardSupersedingSpecAccepted(context);
  }
}
